--- a/src/app/modules/life/components/weight/weight.component.html
+++ b/src/app/modules/life/components/weight/weight.component.html
@@ -1,7 +1,6 @@
 <p *ngIf="units">
   <life-add-weight [units]="units" [saveWeight]="saveWeight"></life-add-weight>
 </p>
-<p *ngIf="weightService.weights">
-  {{ weightService.weights.length }}
+<p *ngIf="weightService.weights.length !== 0">
   <life-weight-chart [weights]="weightService.weights"></life-weight-chart>
 </p>
