--- a/src/app/modules/wealth/wealth-dashboard/wealth-dashboard.component.html
+++ b/src/app/modules/wealth/wealth-dashboard/wealth-dashboard.component.html
@@ -1,6 +1,6 @@
 <p *ngIf="meta">
   assets:
-  <li *ngFor="let asset of meta.assets">
-    {{asset.name}}
+  <li *ngFor="let ws of meta.ws_types">
+    {{ws.name}}
   </li>
   <p>
