--- a/src/app/modules/wealth/wealth-dashboard/wealth-dashboard.component.html
+++ b/src/app/modules/wealth/wealth-dashboard/wealth-dashboard.component.html
@@ -1,6 +1,11 @@
-<p *ngIf="meta">
+<p *ngIf="meta$ | async as meta">
   assets:
   <li *ngFor="let ws of meta.ws_types">
     {{ws.name}}
   </li>
+
+
+  <span *ngIf="wsources$ | async as wsources">
+    <wealth-wsource [types]="meta.ws_types" [currencies]="meta.currencies" [wsources]="wsources"></wealth-wsource>
+  </span>
   <p>
