update deps create few components create few subroutes create few services etc.. :see-no-evil:

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,6 +4,8 @@
 </h1>
 
 <button routerLink="/wealth">Wealth</button>
+<button routerLink="/wealth/wealth-source">Wealth sources</button>
+<button routerLink="/wealth/currency">Currencies</button>
 <button routerLink="/life">Life</button>
 <button routerLink="">Home</button>
 
