--- a/src/app/modules/wealth/components/dashboard/dashboard.component.html
+++ b/src/app/modules/wealth/components/dashboard/dashboard.component.html
@@ -5,7 +5,7 @@
   </li>
 
 
-  <span *ngIf="wsources$ | async as wsources">
+  <!-- <span *ngIf="wsources$ | async as wsources">
     <wealth-wsource [types]="meta.ws_types" [currencies]="meta.currencies" [wsources]="wsources"></wealth-wsource>
-  </span>
+  </span> -->
   <p>
