--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,6 +5,7 @@
 
 <button routerLink="/wealth">Wealth</button>
 <button routerLink="/wealth/wealth-source">Wealth sources</button>
+<button routerLink="/wealth/wealth-record">Wealth records</button>
 <button routerLink="/wealth/currency">Currencies</button>
 <button routerLink="/life">Life</button>
 <button routerLink="">Home</button>
