--- a/src/app/modules/wealth/components/currency-list/currency-list.component.html
+++ b/src/app/modules/wealth/components/currency-list/currency-list.component.html
@@ -1,6 +1,19 @@
-<li *ngFor="let currency of currencies">
-  <div>
-    {{currency.name}}
-    <button (click)="handleDelete(currency.id)">remove</button>
-  </div>
-</li>
+<div class="mat-elevation-z8">
+  <mat-table #table [dataSource]="currencies">
+
+    <ng-container matColumnDef="name">
+      <mat-header-cell *matHeaderCellDef> Name </mat-header-cell>
+      <mat-cell *matCellDef="let element"> {{element.name}} </mat-cell>
+    </ng-container>
+
+    <ng-container matColumnDef="actions">
+      <mat-header-cell *matHeaderCellDef> Actions </mat-header-cell>
+      <mat-cell *matCellDef="let element">
+        <button (click)="handleDelete(element.id)" mat-raised-button color="warn">delete</button>
+      </mat-cell>
+    </ng-container>
+
+    <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
+    <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
+  </mat-table>
+</div>
