--- a/src/app/modules/wealth/components/wsource-add/wsource-add.component.html
+++ b/src/app/modules/wealth/components/wsource-add/wsource-add.component.html
@@ -1,13 +1,28 @@
 <div>
-  <label>name:
-    <input [(ngModel)]="name" placeholder="name">
-  </label>
-  <select [(ngModel)]="type">
-    <option *ngFor="let type of types " [ngValue]="type">{{type.name}}</option>
-  </select>
-  <select [(ngModel)]="currency">
-    <option *ngFor="let currency of currencies " [ngValue]="currency">{{currency.name}}</option>
-  </select>
-
-  <button (click)="handleCreate()">save</button>
+  <mat-form-field>
+    <input [(ngModel)]="name" placeholder="name" matInput placeholder="Name">
+  </mat-form-field>
 </div>
+
+
+<div>
+  <mat-form-field>
+    <mat-select placeholder="Wealth source type" [(ngModel)]="type">
+      <mat-option *ngFor="let type of types" [value]="type">
+        {{type.name}}
+      </mat-option>
+    </mat-select>
+  </mat-form-field>
+</div>
+
+<div>
+  <mat-form-field>
+    <mat-select placeholder="Currency" [(ngModel)]="currency">
+      <mat-option *ngFor="let currency of currencies" [value]="currency">
+        {{currency.name}}
+      </mat-option>
+    </mat-select>
+  </mat-form-field>
+</div>
+
+<button (click)="handleCreate()" mat-raised-button>save</button>
