--- a/src/app/modules/wealth/components/wsource-list/wsource-list.component.html
+++ b/src/app/modules/wealth/components/wsource-list/wsource-list.component.html
@@ -1,15 +1,33 @@
-<li *ngFor="let wsource of wsources">
-  <div>
-    name: {{wsource.name}}
-  </div>
-  <div>
-    type: {{wsource.type}}
-  </div>
-  <div>
-    currencies:
-    <li *ngFor="let currency of wsource.currencies">
-      <span>{{currency.name}}</span>
-    </li>
-  </div>
-  <button (click)="delete(wsource.id)">delete</button>
-</li>
+<div class="mat-elevation-z8">
+  <mat-table #table [dataSource]="wsources">
+
+    <ng-container matColumnDef="name">
+      <mat-header-cell *matHeaderCellDef> No. </mat-header-cell>
+      <mat-cell *matCellDef="let element"> {{element.name}} </mat-cell>
+    </ng-container>
+
+    <ng-container matColumnDef="type">
+      <mat-header-cell *matHeaderCellDef> Name </mat-header-cell>
+      <mat-cell *matCellDef="let element"> {{element.type}} </mat-cell>
+    </ng-container>
+
+    <ng-container matColumnDef="currencies">
+      <mat-header-cell *matHeaderCellDef> Currencies </mat-header-cell>
+      <mat-cell *matCellDef="let element">
+        <li *ngFor="let currency of element.currencies">
+          <span>{{currency.name}}</span>
+        </li>
+      </mat-cell>
+    </ng-container>
+
+    <ng-container matColumnDef="actions">
+      <mat-header-cell *matHeaderCellDef> Actions </mat-header-cell>
+      <mat-cell *matCellDef="let element">
+        <button (click)="delete(element.id)" mat-raised-button color="warn">delete</button>
+      </mat-cell>
+    </ng-container>
+
+    <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
+    <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
+  </mat-table>
+</div>
