add wsource user

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,6 +7,7 @@
       <button routerLink="/wealth/wealth-source" mat-menu-item>Wealth sources</button>
       <button routerLink="/wealth/wealth-record" mat-menu-item>Wealth records</button>
       <button routerLink="/wealth/currency" mat-menu-item>Currencies</button>
+      <button routerLink="/wealth/wealth-source/user" mat-menu-item>WSource user</button>
     </mat-menu>
     <button mat-button [matMenuTriggerFor]="life">Life</button>
     <mat-menu #life="matMenu">
